[package]
name = "about-filter"
version = "0.1.1"
edition = "2021"

readme = "README.md"
license-file = "LICENSE"
description = "cgit-specific readme formatter multiplexer"
homepage = "https://git.ylh.io/about-filter"
repository = "https://github.com/ylh/about-filter"

[dependencies]
rst_parser = "0.4.0"
rst_renderer = "0.4.0"
comrak = { version = "0.13.0", default-features = false }
html-escape = "0.2.11"
